--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "express-handlebars": "^5.1.0",
+    "mongodb": "^3.6.2",
     "mysql2": "^2.2.5",
     "pub": "^0.2.0",
     "pug": "^3.0.0",
