--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^5.1.0",
     "mongodb": "^3.6.2",
+    "mongoose": "^5.10.11",
     "mysql2": "^2.2.5",
     "pub": "^0.2.0",
     "pug": "^3.0.0",
