--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "mongodb": "^3.6.2",
     "mongoose": "^5.10.11",
     "mysql2": "^2.2.5",
+    "nodemailer": "^6.4.15",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "pub": "^0.2.0",
     "pug": "^3.0.0",
     "sequelize": "^6.3.5"
