--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "pdfkit": "^0.11.0",
     "pub": "^0.2.0",
     "pug": "^3.0.0",
-    "sequelize": "^6.3.5"
+    "sequelize": "^6.3.5",
+    "stripe": "^8.121.0"
   }
 }
